--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#0b0f17">
   <meta name="description" content="RetryIX AGI：以零拷貝與語義記憶體為核心的次世代智能體系。">
+
+  <!-- Canonical & Social Cards -->
+  <link rel="canonical" href="https://retryixagi.com/">
   <meta property="og:title" content="RetryIX AGI Inc">
   <meta property="og:description" content="以語義記憶體取代暴力浮點運算的 AGI 架構。">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ixu2486.github.io/">
+  <meta property="og:url" content="https://retryixagi.com/">
+  <meta property="og:image" content="https://retryixagi.com/assets/hero.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:alt" content="RetryIX AGI — Semantic Memory & Zero-Copy">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="RetryIX AGI Inc">
+  <meta name="twitter:description" content="以語義記憶體取代暴力浮點運算的 AGI 架構。">
+  <meta name="twitter:image" content="https://retryixagi.com/assets/hero.png">
+  <link rel="icon" href="/assets/favicon.png">
+
   <style>
     :root{
       --bg:#0b0f17; --card:#121826; --ink:#e6edf3; --muted:#9fb0c3; --pri:#7cc7ff; --acc:#14f195;
@@ -17,6 +29,7 @@
     }
     *{box-sizing:border-box}
     html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,"Noto Sans TC",sans-serif}
+    img{image-rendering:auto;max-width:100%;height:auto}
     a{color:var(--link);text-decoration:none} a:hover{opacity:.9;text-decoration:underline}
     .wrap{max-width:1100px;margin:auto;padding:24px}
     .nav{display:flex;justify-content:space-between;align-items:center;gap:16px;padding:10px 0}
@@ -53,6 +66,10 @@
       </div>
     </nav>
 
+    <!-- Hero Banner -->
+    <img src="assets/hero.png" alt="RetryIX AGI — Semantic Memory & Zero-Copy"
+         style="width:100%;border-radius:16px;display:block;margin:10px 0 22px 0;">
+
     <section class="hero">
       <div class="card">
         <div class="badge">⚙️ Semantic • Zero-Copy • OpenCL 2.0 SVM</div>
@@ -66,11 +83,11 @@
         </p>
         <div class="kpis">
           <div class="kpi"><b>Zero-Copy</b><br><span class="mono">Sub-200µs pipeline</span></div>
-          <div class="kpi"><b>Semantic RAID</b><br><span class="mono">11.7+ GB/s eff.</span></div>
+          <div class="kpi"><b>Memory RAID</b><br><span class="mono">11.7+ GB/s eff.</span></div>
           <div class="kpi"><b>GGUF Bridge</b><br><span class="mono">Cognitive repair loop</span></div>
         </div>
         <div style="display:flex;gap:10px;margin-top:16px">
-          <a class="cta" href="#projects">View Projects</a>
+          <a class="cta" href="#projects" data-zh="查看專案" data-en="View Projects">查看專案</a>
           <a class="cta ghost" href="#contact" data-zh="聯絡我們" data-en="Contact">聯絡我們</a>
         </div>
       </div>
@@ -122,7 +139,7 @@
       <div class="card">
         <h2>Semantic-HFT-ASI</h2>
         <p class="mono" data-zh="十層語義場 × 低延遲對沖引擎，<200ms 閉環。"
-           data-en="10-layer semantic field × low-latency hedging engine, <200ms loop.">
+           data-en="10-layer semantic field × low-latency hedging engine, &lt;200ms loop.">
           十層語義場 × 低延遲對沖引擎，&lt;200ms 閉環。
         </p>
         <a href="https://github.com/ixu2486" target="_blank" rel="noopener">Docs →</a>
@@ -144,20 +161,20 @@
     <section id="contact" class="card" style="margin-top:16px">
       <h2 data-zh="聯絡" data-en="Contact">聯絡</h2>
       <p class="mono">✉️ <a href="mailto:ixu@retryix.com">ixu@retryix.com</a></p>
-      <p class="mono">🌐 <a href="https://retryixagi.com" target="_blank" rel="noopener">retryixagi.com</a>（可綁定到此頁）</p>
+      <p class="mono">🌐 <a href="https://retryixagi.com" target="_blank" rel="noopener">retryixagi.com</a></p>
     </section>
 
     <footer class="foot">
       <div>© <span id="y"></span> RetryIX AGI Inc</div>
       <div class="mono" data-zh="以語義記憶體驅動的下一代智能"
            data-en="Next-gen intelligence powered by semantic memory">
-        以語義記憶體驅動的下一代智能
+        以語義記憢體驅動的下一代智能
       </div>
     </footer>
   </div>
 
   <script>
-    // 年份 & 簡易雙語切換
+    // 年份 & 雙語切換
     document.getElementById('y').textContent = new Date().getFullYear();
     const btn = document.getElementById('lang');
     let en = false;
