--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div>© <span id="y"></span> RetryIX AGI Inc</div>
       <div class="mono" data-zh="以語義記憶體驅動的下一代智能"
            data-en="Next-gen intelligence powered by semantic memory">
-        以語義記憢體驅動的下一代智能
+        以語義記憶體驅動的下一代智能
       </div>
     </footer>
   </div>
