--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
       <div class="card">
         <h2 data-zh="近期里程碑" data-en="Recent Milestones">近期里程碑</h2>
         <ul class="list">
+          <li data-zh="RetryIX-OpenCL2.0-512B — 發佈 README 與授權策略"
+              data-en="RetryIX-OpenCL2.0-512B — README & licensing published">
+            RetryIX-OpenCL2.0-512B — 發佈 README 與授權策略
+          </li>
+           <li data-zh="2025_OpenCL2.0 全新SDK — 發佈 README 與開源策略"
+              data-en="2025_OpenCL2.0 全新SDK — README & licensing published">
+            2025_OpenCL2.0 全新SDK — 發佈 README 與開源策略
+          </li>
           <li data-zh="Memory RAID 1.0 — 發佈 README 與授權策略"
               data-en="Memory RAID 1.0 — README & licensing published">
             Memory RAID 1.0 — 發佈 README 與授權策略
