--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
               data-en="RetryIX-OpenCL2.0-512B — README & licensing published">
             RetryIX-OpenCL2.0-512B — 發佈 README 與授權策略
           </li>
-           <li data-zh="2025_OpenCL2.0 全新SDK — 發佈 README 與開源策略"
-              data-en="2025_OpenCL2.0 全新SDK — README & licensing published">
-            2025_OpenCL2.0 全新SDK — 發佈 README 與開源策略
+           <li data-zh="RetryIX 2025 OpenCL2.0 全新SDK — 發佈 README 與開源策略"
+              data-en="RetryIX 2025 OpenCL2.0 全新SDK — README & licensing published">
+            RetryIX 2025_OpenCL2.0 全新SDK — 發佈 README 與開源策略
           </li>
           <li data-zh="Memory RAID 1.0 — 發佈 README 與授權策略"
               data-en="Memory RAID 1.0 — README & licensing published">
@@ -119,6 +119,8 @@
           </li>
         </ul>
         <div style="margin-top:10px">
+           <span class="tag">RetryIX-OpenCL2.0-512B</span>
+           <span class="tag">RetryIX 2025_OpenCL2.0 全新SDK</span>
           <span class="tag">OpenCL 2.0 SVM</span>
           <span class="tag">Zero-Copy</span>
           <span class="tag">Semantic HFT</span>
