--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="brand">RetryIX AGI Inc</div>
       <div style="display:flex;gap:10px">
         <button class="pill" id="lang">EN</button>
-        <a class="pill" href="https://github.com/ixu2486" target="_blank" rel="noopener">GitHub</a>
+        <a class="pill" href="https://github.com/Retryixagi" target="_blank" rel="noopener">GitHub</a>
       </div>
     </nav>
 
