--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <meta name="twitter:title" content="RetryIX AGI Inc">
   <meta name="twitter:description" content="以語義記憶體取代暴力浮點運算的 AGI 架構。">
   <meta name="twitter:image" content="https://retryixagi.com/assets/hero.png">
-  <link rel="icon" href="/assets/favicon.png">
+  <link rel="icon" href="icon48.png" type="image/png">
+<link rel="apple-touch-icon" href="icon48.png">
+<meta name="msapplication-TileImage" content="icon48.png">
 
   <style>
     :root{
@@ -146,17 +148,19 @@
       </div>
     </section>
 
-    <section class="card" style="margin-top:16px">
-      <h2 data-zh="授權與商務" data-en="Licensing & Business">授權與商務</h2>
-      <p class="mono" data-zh="個人與學術用途免費；商業用途需授權。歡迎來信取得試用與方案。"
-         data-en="Free for personal/academic use; commercial licensing available.">
-        個人與學術用途免費；商業用途需授權。歡迎來信取得試用與方案。
-      </p>
-      <ul class="list">
-        <li data-zh="授權聯絡：ixu@retryix.com" data-en="Licensing contact: ixu@retryix.com">授權聯絡：ixu@retryix.com</li>
-        <li data-zh="安全白名單合作、PoC、共同研發" data-en="Security-whitelisted partnerships, PoC, co-dev">安全白名單合作、PoC、共同研發</li>
-      </ul>
-    </section>
+    
+<section class="card" style="margin-top:16px">
+  <h2 data-zh="創業合作與投資者資訊" data-en="Partnership & Investor Info">創業合作與投資者資訊</h2>
+  <p class="mono" data-zh="RetryIX AGI 歡迎各界對於語義運算與高效能 AI 系統有興趣的合作夥伴與投資者，共同推動下一代 AGI 架構。" data-en="RetryIX AGI welcomes partnerships and investors interested in semantic computing and high-efficiency AI systems.">
+    RetryIX AGI 歡迎各界對於語義運算與高效能 AI 系統有興趣的合作夥伴與投資者，共同推動下一代 AGI 架構。
+  </p>
+  <ul class="list">
+    <li data-zh="資金合作模式與技術授權" data-en="Funding collaboration and technical licensing">資金合作模式與技術授權</li>
+    <li data-zh="戰略投資與創業合作夥伴招募" data-en="Strategic investment & startup partnership recruitment">戰略投資與創業合作夥伴招募</li>
+    <li data-zh="聯絡窗口：ixu@retryixagi.com" data-en="Contact: ixu@retryixagi.com">聯絡窗口：ixu@retryixagi.com</li>
+  </ul>
+</section>
+
 
     <section id="contact" class="card" style="margin-top:16px">
       <h2 data-zh="聯絡" data-en="Contact">聯絡</h2>
@@ -168,7 +172,7 @@
       <div>© <span id="y"></span> RetryIX AGI Inc</div>
       <div class="mono" data-zh="以語義記憶體驅動的下一代智能"
            data-en="Next-gen intelligence powered by semantic memory">
-        以語義記憶體驅動的下一代智能
+        以語義記憢體驅動的下一代智能
       </div>
     </footer>
   </div>
