--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="brand">RetryIX AGI Inc</div>
       <div style="display:flex;gap:10px">
         <button class="pill" id="lang">EN</button>
-        <a class="pill" href="https://github.com/ixu2486" target="_blank" rel="noopener">GitHub</a>
+        <a class="pill" href="https://github.com/Retryixagi" target="_blank" rel="noopener">GitHub</a>
       </div>
     </nav>
 
@@ -97,6 +97,14 @@
       <div class="card">
         <h2 data-zh="近期里程碑" data-en="Recent Milestones">近期里程碑</h2>
         <ul class="list">
+          <li data-zh="RetryIX-OpenCL2.0-512B — 發佈 README 與授權策略"
+              data-en="RetryIX-OpenCL2.0-512B — README & licensing published">
+            RetryIX-OpenCL2.0-512B — 發佈 README 與授權策略
+          </li>
+           <li data-zh="RetryIX 2025 OpenCL2.0 全新SDK — 發佈 README 與開源策略"
+              data-en="RetryIX 2025 OpenCL2.0 全新SDK — README & licensing published">
+            RetryIX 2025_OpenCL2.0 全新SDK — 發佈 README 與開源策略
+          </li>
           <li data-zh="Memory RAID 1.0 — 發佈 README 與授權策略"
               data-en="Memory RAID 1.0 — README & licensing published">
             Memory RAID 1.0 — 發佈 README 與授權策略
@@ -111,6 +119,8 @@
           </li>
         </ul>
         <div style="margin-top:10px">
+           <span class="tag">RetryIX-OpenCL2.0-512B</span>
+           <span class="tag">RetryIX 2025_OpenCL2.0 全新SDK</span>
           <span class="tag">OpenCL 2.0 SVM</span>
           <span class="tag">Zero-Copy</span>
           <span class="tag">Semantic HFT</span>
