--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             RetryIX-OpenCL2.0-512B — 發佈 README 與授權策略
           </li>
            <li data-zh="RetryIX 2025 OpenCL2.0 全新SDK — 發佈 README 與開源策略"
-              data-en="RetryIX 2025 OpenCL2.0 全新SDK — README & licensing published">
+              data-en="RetryIX 2025 OpenCL2.0 All new SDK — README & licensing published">
             RetryIX 2025_OpenCL2.0 全新SDK — 發佈 README 與開源策略
           </li>
           <li data-zh="Memory RAID 1.0 — 發佈 README 與授權策略"
