--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="zh-Hant">
 <head>
-  <meta charset="utf-8">
-  <title>RetryIX AGI Inc — Semantic Memory & Zero-Copy Intelligence</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#0b0f17">
-  <meta name="description" content="RetryIX AGI：以零拷貝與語義記憶體為核心的次世代智能體系。">
-
-  <!-- Canonical & Social Cards -->
-  <link rel="canonical" href="https://retryixagi.com/">
-  <meta property="og:title" content="RetryIX AGI Inc">
-  <meta property="og:description" content="以語義記憶體取代暴力浮點運算的 AGI 架構。">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://retryixagi.com/">
-  <meta property="og:image" content="https://retryixagi.com/assets/hero.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:alt" content="RetryIX AGI — Semantic Memory & Zero-Copy">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="RetryIX AGI Inc">
-  <meta name="twitter:description" content="以語義記憶體取代暴力浮點運算的 AGI 架構。">
-  <meta name="twitter:image" content="https://retryixagi.com/assets/hero.png">
-  <link rel="icon" href="icon48.png" type="image/png">
-<link rel="apple-touch-icon" href="icon48.png">
-<meta name="msapplication-TileImage" content="icon48.png">
-
-  <style>
+<meta charset="utf-8"/>
+<title>RetryIX AGI Inc — Semantic Memory &amp; Zero-Copy Intelligence</title>
+<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="#0b0f17" name="theme-color"/>
+<meta content="RetryIX AGI：以零拷貝與語義記憶體為核心的次世代智能體系。" name="description"/>
+<!-- Canonical & Social Cards -->
+<link href="https://retryixagi.com/" rel="canonical"/>
+<meta content="RetryIX AGI Inc" property="og:title"/>
+<meta content="以語義記憶體取代暴力浮點運算的 AGI 架構。" property="og:description"/>
+<meta content="website" property="og:type"/>
+<meta content="https://retryixagi.com/" property="og:url"/>
+<meta content="https://retryixagi.com/assets/hero.png" property="og:image"/>
+<meta content="image/png" property="og:image:type"/>
+<meta content="RetryIX AGI — Semantic Memory &amp; Zero-Copy" property="og:image:alt"/>
+<meta content="summary_large_image" name="twitter:card"/>
+<meta content="RetryIX AGI Inc" name="twitter:title"/>
+<meta content="以語義記憶體取代暴力浮點運算的 AGI 架構。" name="twitter:description"/>
+<meta content="https://retryixagi.com/assets/hero.png" name="twitter:image"/>
+<link href="icon48.png" rel="icon" type="image/png"/>
+<link href="icon48.png" rel="apple-touch-icon"/>
+<meta content="icon48.png" name="msapplication-TileImage"/>
+<style>
     :root{
       --bg:#0b0f17; --card:#121826; --ink:#e6edf3; --muted:#9fb0c3; --pri:#7cc7ff; --acc:#14f195;
       --edge:#1c2a3b; --link:#8be9fd; --warn:#ffcc00;
@@ -59,146 +58,120 @@
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <nav class="nav">
-      <div class="brand">RetryIX AGI Inc</div>
-      <div style="display:flex;gap:10px">
-        <button class="pill" id="lang">EN</button>
-        <a class="pill" href="https://github.com/ixu2486" target="_blank" rel="noopener">GitHub</a>
-      </div>
-    </nav>
-
-    <!-- Hero Banner -->
-    <img src="assets/hero.png" alt="RetryIX AGI — Semantic Memory & Zero-Copy"
-         style="width:100%;border-radius:16px;display:block;margin:10px 0 22px 0;">
-
-    <section class="hero">
-      <div class="card">
-        <div class="badge">⚙️ Semantic • Zero-Copy • OpenCL 2.0 SVM</div>
-        <h1 data-zh="以語義記憶體取代暴力浮點 — 新一代 AGI 核心"
-            data-en="Replace Brute-Force FLOPs with Semantic Memory — The Next AGI Core">
+<div class="wrap">
+<nav class="nav">
+<div class="brand">RetryIX AGI Inc</div>
+<div style="display:flex;gap:10px">
+<button class="pill" id="lang">EN</button>
+<a class="pill" href="https://github.com/ixu2486" rel="noopener" target="_blank">GitHub</a>
+</div>
+</nav>
+<!-- Hero Banner -->
+<img alt="RetryIX AGI — Semantic Memory &amp; Zero-Copy" src="assets/hero.png" style="width:100%;border-radius:16px;display:block;margin:10px 0 22px 0;"/>
+<section class="hero">
+<div class="card">
+<div class="badge">⚙️ Semantic • Zero-Copy • OpenCL 2.0 SVM</div>
+<h1 data-en="Replace Brute-Force FLOPs with Semantic Memory — The Next AGI Core" data-zh="以語義記憶體取代暴力浮點 — 新一代 AGI 核心">
           以語義記憶體取代暴力浮點 — 新一代 AGI 核心
         </h1>
-        <p class="mono" data-zh="我們用零拷貝與共享虛擬記憶體，構建可自我修復的語義閉環智能。"
-           data-en="Zero-copy + SVM to build a self-repairing semantic closed-loop intelligence.">
+<p class="mono" data-en="Zero-copy + SVM to build a self-repairing semantic closed-loop intelligence." data-zh="我們用零拷貝與共享虛擬記憶體，構建可自我修復的語義閉環智能。">
           我們用零拷貝與共享虛擬記憶體，構建可自我修復的語義閉環智能。
         </p>
-        <div class="kpis">
-          <div class="kpi"><b>Zero-Copy</b><br><span class="mono">Sub-200µs pipeline</span></div>
-          <div class="kpi"><b>Memory RAID</b><br><span class="mono">11.7+ GB/s eff.</span></div>
-          <div class="kpi"><b>GGUF Bridge</b><br><span class="mono">Cognitive repair loop</span></div>
-        </div>
-        <div style="display:flex;gap:10px;margin-top:16px">
-          <a class="cta" href="#projects" data-zh="查看專案" data-en="View Projects">查看專案</a>
-          <a class="cta ghost" href="#contact" data-zh="聯絡我們" data-en="Contact">聯絡我們</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <h2 data-zh="近期里程碑" data-en="Recent Milestones">近期里程碑</h2>
-        <ul class="list">
-          <li data-zh="Memory RAID 1.0 — 發佈 README 與授權策略"
-              data-en="Memory RAID 1.0 — README & licensing published">
+<div class="kpis">
+<div class="kpi"><b>Zero-Copy</b><br/><span class="mono">Sub-200µs pipeline</span></div>
+<div class="kpi"><b>Memory RAID</b><br/><span class="mono">11.7+ GB/s eff.</span></div>
+<div class="kpi"><b>GGUF Bridge</b><br/><span class="mono">Cognitive repair loop</span></div>
+</div>
+<div style="display:flex;gap:10px;margin-top:16px">
+<a class="cta" data-en="View Projects" data-zh="查看專案" href="#projects">查看專案</a>
+<a class="cta ghost" data-en="Contact" data-zh="聯絡我們" href="#contact">聯絡我們</a>
+</div>
+</div>
+<div class="card">
+<h2 data-en="Recent Milestones" data-zh="近期里程碑">近期里程碑</h2>
+<ul class="list">
+<li data-en="Memory RAID 1.0 — README &amp; licensing published" data-zh="Memory RAID 1.0 — 發佈 README 與授權策略">
             Memory RAID 1.0 — 發佈 README 與授權策略
           </li>
-          <li data-zh="GGUF 認知橋接器 v3.0 — 零拷貝加速"
-              data-en="GGUF Cognitive Bridge v3.0 — Zero-copy acceleration">
+<li data-en="GGUF Cognitive Bridge v3.0 — Zero-copy acceleration" data-zh="GGUF 認知橋接器 v3.0 — 零拷貝加速">
             GGUF 認知橋接器 v3.0 — 零拷貝加速
           </li>
-          <li data-zh="六層語義閉環模型 — 開源（個人/學術免費、商業付費）"
-              data-en="Six-Layer Semantic Loop — Open-sourced (non-commercial free)">
+<li data-en="Six-Layer Semantic Loop — Open-sourced (non-commercial free)" data-zh="六層語義閉環模型 — 開源（個人/學術免費、商業付費）">
             六層語義閉環模型 — 開源（個人/學術免費、商業付費）
           </li>
-        </ul>
-        <div style="margin-top:10px">
-          <span class="tag">OpenCL 2.0 SVM</span>
-          <span class="tag">Zero-Copy</span>
-          <span class="tag">Semantic HFT</span>
-          <span class="tag">GPU/CPU Hybrid</span>
-        </div>
-      </div>
-    </section>
-
-    <section id="projects" class="grid">
-      <div class="card">
-        <h2>Memory RAID Engine</h2>
-        <p class="mono" data-zh="以 RAID 思維重構記憶體佈局，達成零拷貝與帶寬聚合。"
-           data-en="RAID-inspired memory layout for zero-copy & bandwidth aggregation.">
+</ul>
+<div style="margin-top:10px">
+<span class="tag">OpenCL 2.0 SVM</span>
+<span class="tag">Zero-Copy</span>
+<span class="tag">Semantic HFT</span>
+<span class="tag">GPU/CPU Hybrid</span>
+</div>
+</div>
+</section>
+<section class="grid" id="projects">
+<div class="card">
+<h2>Memory RAID Engine</h2>
+<p class="mono" data-en="RAID-inspired memory layout for zero-copy &amp; bandwidth aggregation." data-zh="以 RAID 思維重構記憶體佈局，達成零拷貝與帶寬聚合。">
           以 RAID 思維重構記憶體佈局，達成零拷貝與帶寬聚合。
         </p>
-        <a href="https://github.com/ixu2486/memory_raid_engine" target="_blank" rel="noopener">GitHub →</a>
-      </div>
-
-      <div class="card">
-        <h2>GGUF Cognitive Bridge</h2>
-        <p class="mono" data-zh="離線 GGUF 與語義修復引擎耦合，提供穩定的認知殘差回饋。"
-           data-en="Couples offline GGUF with semantic repair engine for stable cognition.">
+<a href="https://github.com/ixu2486/memory_raid_engine" rel="noopener" target="_blank">GitHub →</a>
+</div>
+<div class="card">
+<h2>GGUF Cognitive Bridge</h2>
+<p class="mono" data-en="Couples offline GGUF with semantic repair engine for stable cognition." data-zh="離線 GGUF 與語義修復引擎耦合，提供穩定的認知殘差回饋。">
           離線 GGUF 與語義修復引擎耦合，提供穩定的認知殘差回饋。
         </p>
-        <a href="https://github.com/ixu2486" target="_blank" rel="noopener">Repository Index →</a>
-      </div>
-
-      <div class="card">
-        <h2>Semantic-HFT-ASI</h2>
-        <p class="mono" data-zh="十層語義場 × 低延遲對沖引擎，<200ms 閉環。"
-           data-en="10-layer semantic field × low-latency hedging engine, &lt;200ms loop.">
+<a href="https://github.com/ixu2486" rel="noopener" target="_blank">Repository Index →</a>
+</div>
+<div class="card">
+<h2>Semantic-HFT-ASI</h2>
+<p class="mono" data-en="10-layer semantic field × low-latency hedging engine, &lt;200ms loop." data-zh="十層語義場 × 低延遲對沖引擎，&lt;200ms 閉環。">
           十層語義場 × 低延遲對沖引擎，&lt;200ms 閉環。
         </p>
-        <a href="https://github.com/ixu2486" target="_blank" rel="noopener">Docs →</a>
-      </div>
-    </section>
-
-    
+<a href="https://github.com/ixu2486" rel="noopener" target="_blank">Docs →</a>
+</div>
+</section>
 <section class="card" style="margin-top:16px">
-  <h2 data-zh="創業合作與投資者資訊" data-en="Partnership & Investor Info">創業合作與投資者資訊</h2>
-  <p class="mono" data-zh="RetryIX AGI 歡迎各界對於語義運算與高效能 AI 系統有興趣的合作夥伴與投資者，共同推動下一代 AGI 架構。" data-en="RetryIX AGI welcomes partnerships and investors interested in semantic computing and high-efficiency AI systems.">
+<h2 data-en="Partnership &amp; Investor Info" data-zh="創業合作與投資者資訊">創業合作與投資者資訊</h2>
+<p class="mono" data-en="RetryIX AGI welcomes partnerships and investors interested in semantic computing and high-efficiency AI systems." data-zh="RetryIX AGI 歡迎各界對於語義運算與高效能 AI 系統有興趣的合作夥伴與投資者，共同推動下一代 AGI 架構。">
     RetryIX AGI 歡迎各界對於語義運算與高效能 AI 系統有興趣的合作夥伴與投資者，共同推動下一代 AGI 架構。
   </p>
-  <ul class="list">
-    <li data-zh="資金合作模式與技術授權" data-en="Funding collaboration and technical licensing">資金合作模式與技術授權</li>
-    <li data-zh="戰略投資與創業合作夥伴招募" data-en="Strategic investment & startup partnership recruitment">戰略投資與創業合作夥伴招募</li>
-    <li data-zh="聯絡窗口：ixu@retryixagi.com" data-en="Contact: ixu@retryixagi.com">聯絡窗口：ixu@retryixagi.com</li>
-  </ul>
+<ul class="list">
+<li data-en="Funding collaboration and technical licensing" data-zh="資金合作模式與技術授權">資金合作模式與技術授權</li>
+<li data-en="Strategic investment &amp; startup partnership recruitment" data-zh="戰略投資與創業合作夥伴招募">戰略投資與創業合作夥伴招募</li>
+<li data-en="Contact: ixu@retryixagi.com" data-zh="聯絡窗口：ixu@retryixagi.com">聯絡窗口：ixu@retryixagi.com</li>
+</ul>
 </section>
-
-
-    <section id="contact" class="card" style="margin-top:16px">
-      <h2 data-zh="聯絡" data-en="Contact">聯絡</h2>
-      <p class="mono">✉️ <a href="mailto:ixu@retryix.com">ixu@retryix.com</a></p>
-      <p class="mono">🌐 <a href="https://retryixagi.com" target="_blank" rel="noopener">retryixagi.com</a></p>
-    </section>
+<section class="card" id="contact" style="margin-top:16px">
+<h2 data-en="Contact" data-zh="聯絡">聯絡</h2>
+<p class="mono">✉️ <a href="mailto:ixu@retryix.com">ixu@retryix.com</a></p>
+<p class="mono">🌐 <a href="https://retryixagi.com" rel="noopener" target="_blank">retryixagi.com</a></p>
+</section>
 <section class="card" style="margin-top:16px">
-  <h2 data-zh="技術模塊現況與對齊實作成果" data-en="Module Progress & Alignment Milestones">技術模塊現況與對齊實作成果</h2>
-  <p class="mono" data-zh="RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。"
-     data-en="RetryIX AGI has completed two semantic memory-based encoding modules: 4MB with 512B×8 alignment, and 8MB with 64B×64 stacking — both achieving 4096B hardware alignment with validated 100-round stability.">
+<h2 data-en="Module Progress &amp; Alignment Milestones" data-zh="技術模塊現況與對齊實作成果">技術模塊現況與對齊實作成果</h2>
+<p class="mono" data-en="RetryIX AGI has completed two semantic memory-based encoding modules: 4MB with 512B×8 alignment, and 8MB with 64B×64 stacking — both achieving 4096B hardware alignment with validated 100-round stability." data-zh="RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。">
      RetryIX AGI 已成功完成兩種基於語義記憶體架構的最佳解編碼模塊：4MB 512B×8 對齊策略、以及 8MB 64B×64 疊加策略，雙雙實現 4096B 硬體對齊與百輪穩定性驗證。
   </p>
-  <p class="mono" data-zh="完整原始碼與實作細節可在下列 GitHub 倉庫取得：" data-en="Full source code and implementation details are available on GitHub:">
+<p class="mono" data-en="Full source code and implementation details are available on GitHub:" data-zh="完整原始碼與實作細節可在下列 GitHub 倉庫取得：">
     完整原始碼與實作細節可在下列 GitHub 倉庫取得：
     <a href="https://github.com/Retryixagi/RetryIX-OpenCL2.0-51" target="_blank">RetryIX-OpenCL2.0-51</a> /
     <a href="https://github.com/Retryixagi/2025_OpenCL2.0" target="_blank">2025_OpenCL2.0</a>
-  </p>
+</p>
 </section>
-
 <section class="card" style="margin-top:16px">
-  <h2 data-zh="台灣聲明與地緣政治澄清" data-en="Taiwanese Origin Statement">台灣聲明與地緣政治澄清</h2>
-  <p class="mono" data-zh="RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。"
-     data-en="RetryIX AGI is a local technical team based in Taiwan. All source code is developed, tested, and deployed in Taiwan. We have no ties to Mainland China in business or politics — ensuring full neutrality and collaboration transparency.">
+<h2 data-en="Taiwanese Origin Statement" data-zh="台灣聲明與地緣政治澄清">台灣聲明與地緣政治澄清</h2>
+<p class="mono" data-en="RetryIX AGI is a local technical team based in Taiwan. All source code is developed, tested, and deployed in Taiwan. We have no ties to Mainland China in business or politics — ensuring full neutrality and collaboration transparency." data-zh="RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。">
      RetryIX AGI 為台灣本地技術團隊，所有程式碼開發、測試、部署皆於台灣完成，與中國地區（中國大陸）並無任何業務或政治聯繫，敬請各界放心合作與使用。
   </p>
 </section>
-
-
-    <footer class="foot">
-      <div>© <span id="y"></span> RetryIX AGI Inc</div>
-      <div class="mono" data-zh="以語義記憶體驅動的下一代智能"
-           data-en="Next-gen intelligence powered by semantic memory">
+<footer class="foot">
+<div>© <span id="y"></span> RetryIX AGI Inc</div>
+<div class="mono" data-en="Next-gen intelligence powered by semantic memory" data-zh="以語義記憶體驅動的下一代智能">
         以語義記憢體驅動的下一代智能
       </div>
-    </footer>
-  </div>
-
-  <script>
+</footer>
+</div>
+<script>
     // 年份 & 雙語切換
     document.getElementById('y').textContent = new Date().getFullYear();
     const btn = document.getElementById('lang');
