--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <li data-en="Six-Layer Semantic Loop — Open-sourced (non-commercial free)" data-zh="六層語義閉環模型 — 開源（個人/學術免費、商業付費）">
             六層語義閉環模型 — 開源（個人/學術免費、商業付費）
           </li>
-</ul>
+<li data-en="4MB with 512B×8 module completed — Passed 4096B alignment verification" data-zh="4MB 512B×8 對齊模塊完成 — 穩定通過 4096B 硬體對齊驗證">4MB 512B×8 對齊模塊完成 — 穩定通過 4096B 硬體對齊驗證</li><li data-en="8MB with 64B×64 stacking completed — Passed 100-round stability stress test" data-zh="8MB 64B×64 疊加模塊完成 — 高效通過百輪穩定性壓力測試">8MB 64B×64 疊加模塊完成 — 高效通過百輪穩定性壓力測試</li><li data-en="RetryIX alignment modules open-sourced — Published on GitHub" data-zh="開放 RetryIX 對齊模塊原始碼 — GitHub 上同步發布">開放 RetryIX 對齊模塊原始碼 — GitHub 上同步發布</li></ul>
 <div style="margin-top:10px">
 <span class="tag">OpenCL 2.0 SVM</span>
 <span class="tag">Zero-Copy</span>
