--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class="brand">RetryIX AGI Inc</div>
 <div style="display:flex;gap:10px">
 <button class="pill" id="lang">EN</button>
-<a class="pill" href="https://github.com/ixu2486" rel="noopener" target="_blank">GitHub</a>
+<a class="pill" href="https://github.com/Retryixagi" rel="noopener" target="_blank">GitHub</a>
 </div>
 </nav>
 <!-- Hero Banner -->
